feat: setup general llm done

--- a/src/test/eg_parse.ipynb
+++ b/src/test/eg_parse.ipynb
@@ -81,6 +81,67 @@
     "    triplet = str_to_triplet(line)\n",
     "    print(triplet)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "327dee43",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "graph_as_tuples = [('Vedat Tek', 'birth_place', 'Istanbul'),\n",
+    "                   ('I.C.Tower', 'architect', 'Vedat Tek'),\n",
+    "                   ('Ankara Palas', 'architect', 'Vedat Tek'),\n",
+    "                   ('103 Colmore Row', 'architect', 'John Madin'),\n",
+    "                   ('103 Colmore Row', 'location', 'Birmingham'),\n",
+    "                   ('103 Colmore Row', 'architectural_style',\n",
+    "                    'Brutalist architecture'),\n",
+    "                   ('Birmingham', 'leader_name', 'Khalid Mahmood'),\n",
+    "                   ('Jeff Rooker, Baroon Rooker', 'successor', 'Khalid Mahmood')\n",
+    "                   ]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "f14e8228",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<e>Vedat Tek</e> || birth_place || <e>Istanbul</e>\n",
+      "<e>I.C.Tower</e> || architect || <e>Vedat Tek</e>\n",
+      "<e>Ankara Palas</e> || architect || <e>Vedat Tek</e>\n",
+      "<e>103 Colmore Row</e> || architect || <e>John Madin</e>\n",
+      "<e>103 Colmore Row</e> || location || <e>Birmingham</e>\n",
+      "<e>103 Colmore Row</e> || architectural_style || <e>Brutalist architecture</e>\n",
+      "<e>Birmingham</e> || leader_name || <e>Khalid Mahmood</e>\n",
+      "<e>Jeff Rooker, Baroon Rooker</e> || successor || <e>Khalid Mahmood</e>\n"
+     ]
+    }
+   ],
+   "source": [
+    "from typing import Tuple\n",
+    "\n",
+    "def tuple_to_str(triplet: Tuple[str, str, str]) -> str:\n",
+    "    \"\"\"\n",
+    "    Convert a triplet (subject, relation, object) back into the ERE string format.\n",
+    "\n",
+    "    Entities are wrapped in <e>...</e> tags.\n",
+    "    Relation is placed between '||' delimiters.\n",
+    "\n",
+    "    Example:\n",
+    "      (\"Ent1\", \"relation\", \"Ent2\") -> \"<e>Ent1</e> || relation || <e>Ent2</e>\"\n",
+    "    \"\"\"\n",
+    "    subj, rel, obj = triplet\n",
+    "    return f\"<e>{subj}</e> || {rel} || <e>{obj}</e>\"\n",
+    "\n",
+    "for triplet in graph_as_tuples:\n",
+    "    ere_str = tuple_to_str(triplet)\n",
+    "    print(ere_str)"
+   ]
   }
  ],
  "metadata": {
