feat: ready for fixing the triplet generate

--- a/src/notebooks/book_dataset_ready.ipynb
+++ b/src/notebooks/book_dataset_ready.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "fc49790b",
    "metadata": {},
    "outputs": [],
@@ -10,12 +10,13 @@
     "import os\n",
     "import sys\n",
     "sys.path.insert(0, '..')\n",
-    "from utils.dataset_processing import process_data"
+    "from utils.dataset_processing import process_data\n",
+    "from utils.parser import tuple_to_str"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "9b1126ac",
    "metadata": {},
    "outputs": [
@@ -57,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "id": "3f0c6f58",
    "metadata": {},
    "outputs": [
@@ -65,31 +66,33 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Done: Input length = 5000, Output length = 5000\n",
-      "Done: Input length = 300, Output length = 300\n",
-      "Done: Input length = 1000, Output length = 1000\n"
+      "[]\n"
      ]
     }
    ],
    "source": [
     "def get_finetune_structured_data(data: dict):\n",
-    "    finetune_data = {\"input\": [], \"output\": []}\n",
+    "    finetune_data = []\n",
     "    keys = data.keys()\n",
     "    for key in keys:\n",
-    "        finetune_data[\"input\"].append(key)\n",
-    "        finetune_data[\"output\"].append(data[key][\"triplet\"])\n",
+    "        item = {\"input\": key, \"output\": \"\"}\n",
+    "        print(data[key][\"triplet\"])\n",
+    "        triple_str = [tuple_to_str(triplet) for triplet in data[key][\"triplet\"]]\n",
+    "        triple_str = \"\\n\".join(triple_str)\n",
+    "        item[\"output\"] = triple_str\n",
+    "        finetune_data.append(item)\n",
+    "        break\n",
     "\n",
-    "    print(f\"Done: Input length = {len(finetune_data['input'])}, Output length = {len(finetune_data['output'])}\")\n",
     "    return finetune_data\n",
     "\n",
-    "train = get_finetune_structured_data(train_data)\n",
-    "validation = get_finetune_structured_data(valid_data)\n",
+    "# train = get_finetune_structured_data(train_data)\n",
+    "# validation = get_finetune_structured_data(valid_data)\n",
     "test = get_finetune_structured_data(test_data)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "id": "31e225eb",
    "metadata": {},
    "outputs": [],
