feat: upload before using LLM to labelling

--- a/src/test/specialized_llm.ipynb
+++ b/src/test/specialized_llm.ipynb
@@ -105,8 +105,7 @@
      "output_type": "stream",
      "text": [
       "The attention mask and the pad token id were not set. As a consequence, you may observe unexpected behavior. Please pass your input's `attention_mask` to obtain reliable results.\n",
-      "Setting `pad_token_id` to `eos_token_id`:128001 for open-end generation.\n",
-      "The attention mask is not set and cannot be inferred from input because pad token is same as eos token. As a consequence, you may observe unexpected behavior. Please pass your input's `attention_mask` to obtain reliable results.\n"
+      "Setting `pad_token_id` to `eos_token_id`:128001 for open-end generation.\n"
      ]
     },
     {
@@ -114,31 +113,34 @@
      "output_type": "stream",
      "text": [
       "Input Text:\n",
-      " Claim: Aleksandre Guruli does not play for a soccer club, his home ground is not in Hadsund Hallerne.\n",
+      " Claim: Khalid Mahmood is the leader of a city which was the birthplace of architect, Vedat Tek, who designed 103 Colmore Row and I.C.Tower.\n",
       "Generate pseudo-subgraph:\n",
       "\n",
       "\n",
       "Generated Output Text:\n",
-      " Claim: Aleksandre Guruli does not play for a soccer club, his home ground is not in Hadsund Hallerne.\n",
+      " Claim: Khalid Mahmood is the leader of a city which was the birthplace of architect, Vedat Tek, who designed 103 Colmore Row and I.C.Tower.\n",
       "Generate pseudo-subgraph:\n",
-      "<e>Aleksandre Guruli</e> || team || <e>\"Hadsund Hallerne\"</e>\n",
-      "<e>Aleksandre Guruli</e> || team || <e>Soccer</e>\n",
-      "<e>Aleksandre Guruli</e> || team || <e>Football</e>\n",
-      "<e>Aleksandre Guruli</e> || ground || <e>\"Hadsund Hallerne\"</e>\n",
-      "<e>Aleksandre Guruli</e> || ground || <e>Soccer</e>\n",
-      "<e>Aleksandre Guruli</e> || ground || <e>Football</e>\n",
-      "<e>Aleksandre Guruli</e> || sport || <e>\"Hadsund Hallerne\"</e>\n",
-      "<e>Aleksandre Guruli</e> || sport || <e>Soccer</e>\n",
-      "<e>Aleksandre Guruli</e> || sport || <e>Football</e\n"
+      "<e>103 Colmore Row</e> || architect || <e>Vedat Tek</e>\n",
+      "<e>103 Colmore Row</e> || architect || <e>Khalid Mahmood</e>\n",
+      "<e>103 Colmore Row</e> || architect || <e>I.C.Tower</e>\n",
+      "<e>Vedat Tek</e> || birthPlace || <e>103 Colmore Row</e>\n",
+      "<e>Vedat Tek</e> || birthPlace || <e>Khalid Mahmood</e>\n",
+      "<e>Vedat Tek</e> || birthPlace || <e>I.C.Tower</e>\n",
+      "<e>103 Colmore Row</e> || architect || <e>Vedat Tek</e>\n",
+      "<e>Khalid Mahmood</e> || architect || <e>Vedat Tek</e>\n",
+      "<e>I.C.Tower</e> || architect || <e>Vedat Tek</e>\n",
+      "<e>Vedat Tek</e> || leader || <e>103 Colmore Row</e>\n",
+      "<e>Vedat Tek</e> || leader || <e>Khalid Mahmood</e>\n",
+      "<e>Vedat Tek\n"
      ]
     }
    ],
    "source": [
     "# Run validation with item 5\n",
-    "item = 'Aleksandre Guruli does not play for a soccer club, his home ground is not in Hadsund Hallerne.'\n",
+    "item = 'Khalid Mahmood is the leader of a city which was the birthplace of architect, Vedat Tek, who designed 103 Colmore Row and I.C.Tower.'\n",
     "input_text = f\"Claim: {item}\\nGenerate pseudo-subgraph:\\n\"\n",
     "input_ids = tokenizer(input_text, return_tensors='pt').input_ids\n",
-    "output_ids = model.generate(input_ids, max_new_tokens=200)\n",
+    "output_ids = model.generate(input_ids, max_new_tokens=250)\n",
     "output_text = tokenizer.decode(output_ids[0], skip_special_tokens=True)\n",
     "print(\"Input Text:\\n\", input_text)\n",
     "# print(\"Ground Truth Output Text:\\n\", item['output'])\n",
