--- a/src/notebooks/book_dataset_ready.ipynb
+++ b/src/notebooks/book_dataset_ready.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "fc49790b",
    "metadata": {},
    "outputs": [],
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "3f0c6f58",
    "metadata": {},
    "outputs": [
@@ -66,7 +66,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[]\n"
+      "Processing key: {'Label': [True], 'Entity_set': ['Addis_Ababa', 'Ethiopia'], 'Evidence': {'Addis_Ababa': [['country']], 'Ethiopia': [['~country']]}, 'types': ['coll:model', 'num1'], 'triplet': [('Addis Ababa', 'country', 'Ethiopia'), ('Ethiopia', 'country', 'Addis Ababa')]}\n",
+      "[('Addis Ababa', 'country', 'Ethiopia'), ('Ethiopia', 'country', 'Addis Ababa')]\n"
      ]
     }
    ],
@@ -76,6 +77,7 @@
     "    keys = data.keys()\n",
     "    for key in keys:\n",
     "        item = {\"input\": key, \"output\": \"\"}\n",
+    "        print(\"Processing key:\", data[key])\n",
     "        print(data[key][\"triplet\"])\n",
     "        triple_str = [tuple_to_str(triplet) for triplet in data[key][\"triplet\"]]\n",
     "        triple_str = \"\\n\".join(triple_str)\n",
@@ -85,8 +87,8 @@
     "\n",
     "    return finetune_data\n",
     "\n",
-    "# train = get_finetune_structured_data(train_data)\n",
-    "# validation = get_finetune_structured_data(valid_data)\n",
+    "train = get_finetune_structured_data(train_data)\n",
+    "validation = get_finetune_structured_data(valid_data)\n",
     "test = get_finetune_structured_data(test_data)"
    ]
   },
